iwyu_failed_h.log
❌ IWYU error in ./src/include/workers/worker_ipc_heartbeat.h
In file included from ./src/include/workers/worker_ipc_heartbeat.h:7:
./src/include/workers/workers.h:234:5: error: label at end of compound statement is a C23 extension [-Werror,-Wc23-extensions]
  234 |     }
      |     ^
./src/include/workers/workers.h:263:5: error: label at end of compound statement is a C23 extension [-Werror,-Wc23-extensions]
  263 |     }
      |     ^
./src/include/workers/workers.h:289:5: error: label at end of compound statement is a C23 extension [-Werror,-Wc23-extensions]
  289 |     }
      |     ^
./src/include/workers/workers.h:338:5: error: label at end of compound statement is a C23 extension [-Werror,-Wc23-extensions]
  338 |     }
      |     ^

src/include/workers/worker_ipc_heartbeat.h should add these lines:
#include <stdio.h>                  // for printf, NULL
#include "constants.h"              // for MAX_RETRY_CNT
#include "ipc/protocol.h"           // for CLOSE_IPC_PROTOCOL, ipc_protocol_t
#include "log.h"                    // for LOG_ERROR, LOG_DEBUG, LOG_DEVEL_D...
struct sockaddr_in6;

src/include/workers/worker_ipc_heartbeat.h should remove these lines:

The full include-list for src/include/workers/worker_ipc_heartbeat.h:
#include <inttypes.h>               // for uint8_t, PRIu32, uint32_t, uint64_t
#include <stdio.h>                  // for printf, NULL
#include "constants.h"              // for MAX_RETRY_CNT
#include "ipc/protocol.h"           // for CLOSE_IPC_PROTOCOL, ipc_protocol_t
#include "log.h"                    // for LOG_ERROR, LOG_DEBUG, LOG_DEVEL_D...
#include "orilink.h"                // for create_orilink_raw_protocol_packet
#include "orilink/heartbeat.h"      // for orilink_prepare_cmd_heartbeat
#include "orilink/heartbeat_ack.h"  // for orilink_prepare_cmd_heartbeat_ack
#include "orilink/protocol.h"       // for CLOSE_ORILINK_RAW_PROTOCOL, CLOSE...
#include "stdbool.h"                // for bool, false, true
#include "types.h"                  // for FAILURE, SUCCESS, status_t, uint6...
#include "utilities.h"              // for decrement_ctr, get_monotonic_time_ns
#include "workers/worker_ipc.h"     // for first_heartbeat_finalization, ret...
#include "workers/workers.h"        // for calculate_retry, cow_c_session_t
struct sockaddr_in6;
---

